路由完善，layout完成!

--- a/project/home/view/index/index.html
+++ b/project/home/view/index/index.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<h2>vf page {{window.title}}</h2>
 
-</body>
-</html>
+<layout-block loaction="head">
+
+    <div>1</div>
+    <div>2</div>
+    <div>3</div>
+</layout-block>
