列表页面 视图条件数据连通

--- a/project/app/home/view/custom/list.html
+++ b/project/app/home/view/custom/list.html
@@ -5,4 +5,7 @@
     <div>
         <list-grid conf="gridConf.data"></list-grid>
     </div>
+    <ul>
+        <li for="val in gridConf.list">{{val}}</li>
+    </ul>
 </div>
