--- a/project/app/home/view/index/index.html
+++ b/project/app/home/view/index/index.html
@@ -1,6 +1,6 @@
 <h2>vf page {{window.title}}</h2>
 
-<a href="home/custom/list">列表页面</a>
+<a href="home/custom/list?viewId=136">列表页面</a>
 <layout-block loaction="head">
 
     <div>1</div>
