--- a/project/app/home/view/custom/list.html
+++ b/project/app/home/view/custom/list.html
@@ -1,11 +1,29 @@
 
 <div>
     <a href="home/index?fdsf=we&age=18">home.java</a>
-    list
+    list{{window.title}}
     <div>
-        <list-grid conf="gridConf.data"></list-grid>
+        <list-grid conf="gridConf"></list-grid>
     </div>
     <ul>
-        <li for="val in gridConf.list">{{val}}</li>
+        <!--<li for="val in s.list">{{val}}</li>-->
     </ul>
+
+
 </div>
+
+
+<!--var lists;
+var a={lists:lists=[1,2]}
+
+
+var o=vf.lib.observer(a)
+
+
+o.watch('lists[0]',function(r){
+
+console.log(r);
+})
+
+
+a.lists=[3,2]-->
