核心框架更新

--- a/project/app/home/view/index/index.html
+++ b/project/app/home/view/index/index.html
@@ -1,9 +1,14 @@
-<h2>vf page {{window.title}}</h2>
-
+<!--<h2>vf page {{window.title}}</h2>-->
+<!--<p v-on:click="click"> click</p>-->
 <a href="home/custom/list?viewId=136">列表页面</a>
+<!--<test config="testConfig"></test>-->
+<input type="text" date:dateTime></input>
+<input type="text" date:dateTime></input>
+<input type="text" date:dateTime></input>
+<!--
 <layout-block loaction="head">
 
     <div>1</div>
     <div>2</div>
     <div>3</div>
-</layout-block>
+</layout-block>-->
