grid数据已渲染

--- a/project/app/home/view/index/index.html
+++ b/project/app/home/view/index/index.html
@@ -2,9 +2,13 @@
 <!--<p v-on:click="click"> click</p>-->
 <a href="home/custom/list?viewId=136">列表页面</a>
 <!--<test config="testConfig"></test>-->
+<!--<input type="text" date:dateTime></input>
 <input type="text" date:dateTime></input>
-<input type="text" date:dateTime></input>
-<input type="text" date:dateTime></input>
+<input type="text" date:dateTime></input>-->
+
+<ul>
+    <li for="(key ,val) in window.list">{{key}}:{{val}}</li>
+</ul>
 <!--
 <layout-block loaction="head">
 
