收集m p 层数据 等待资源销毁

--- a/project/app/home/view/custom/list.html
+++ b/project/app/home/view/custom/list.html
@@ -1,29 +1,4 @@
-
 <div>
-    <a href="home/index?fdsf=we&age=18">home.java</a>
-    list{{window.title}}
-    <div>
-        <list-grid conf="gridConf"></list-grid>
-    </div>
-    <ul>
-        <!--<li for="val in s.list">{{val}}</li>-->
-    </ul>
-
-
+    {{test.y.c}}
+    <list-grid conf="gridConf"></list-grid>
 </div>
-
-
-<!--var lists;
-var a={lists:lists=[1,2]}
-
-
-var o=vf.lib.observer(a)
-
-
-o.watch('lists[0]',function(r){
-
-console.log(r);
-})
-
-
-a.lists=[3,2]-->
