--- a/project/app/home/view/index/index.html
+++ b/project/app/home/view/index/index.html
@@ -6,6 +6,8 @@
 <input type="text" date:dateTime></input>
 <input type="text" date:dateTime></input>-->
 
+<h4 $-on:click="click">{{window.title}}click</h4>
+
 <ul>
     <li for="(key ,val) in window.list">{{key}}:{{val}}</li>
 </ul>
