--- a/project/app/home/view/layout/default.html
+++ b/project/app/home/view/layout/default.html
@@ -1,4 +1,11 @@
-<h5>{{title}}</h5>
-<layout-main>
-    dd
-</layout-main>
+<div class="page-layout">
+    <div class="page-head">
+        <app-nav conf="navStruct"></app-nav>
+    </div>
+    <div class="page-main">
+        <div style="padding: 10px;"></div>
+        <layout-main>
+            dd
+        </layout-main>
+    </div>
+</div>
