--- a/project/comm/style/css/index.css
+++ b/project/comm/style/css/index.css
@@ -547,6 +547,47 @@ button {
 dd {
   margin-left: 20px;
 }
+.page-layout {
+  height: 100%;
+  padding-top: 50px;
+  position: relative;
+  background-color: #EDF0F5;
+}
+.page-layout .page-head {
+  top: 0;
+  width: 100%;
+  height: 75px;
+  z-index: 9;
+  position: absolute;
+}
+.page-layout .page-main {
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+}
+.page-layout .page-main::-webkit-scrollbar {
+  height: 10px;
+  width: 10px;
+}
+.page-layout .page-main::-webkit-scrollbar-track {
+  background-color: #e4e8ea;
+  border-radius: 10px;
+}
+.page-layout .page-main::-webkit-scrollbar-thumb {
+  background-color: #acc1c0;
+  border-radius: 10px;
+}
+.page-layout .page-main::-webkit-scrollbar-thumb:hover {
+  background-color: #00b5a5;
+  border-radius: 10px;
+}
+.page-layout .page-main::-webkit-scrollbar-thumb:active {
+  background-color: #00AC9D;
+  border-radius: 10px;
+}
+.page-layout .page-main::-webkit-scrollbar {
+  height: 10px;
+}
 .list-grid {
   font-size: 14px;
   font-family: PingFangSC-Regular;
@@ -1743,4 +1784,440 @@ textarea:focus {
 .laydate_body .laydate_table td:hover,
 .laydate_body .laydate_time .laydate_hmsno span:hover {
   background-color: #f3f3f3;
+}
+.app-nav {
+  width: 100%;
+  height: 50px;
+  color: white;
+  display: flex;
+  align-items: center;
+  background-color: #2f3748;
+}
+.app-nav .nav-befor,
+.app-nav .nav-after,
+.app-nav .nav-befor > ul,
+.app-nav .nav-after > ul,
+.app-nav .nav-befor > ul > li,
+.app-nav .nav-after > ul > li {
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  vertical-align: middle;
+}
+.app-nav .nav-befor > ul > li,
+.app-nav .nav-after > ul > li {
+  cursor: pointer;
+  font-size: 14px;
+  position: relative;
+  min-width: 50px;
+  text-align: center;
+  justify-content: center;
+}
+.app-nav .nav-befor > ul > li:after,
+.app-nav .nav-after > ul > li:after,
+.app-nav .nav-befor > ul > li:before,
+.app-nav .nav-after > ul > li:before {
+  right: 1px;
+  content: "";
+  height: 20px;
+  position: absolute;
+  border-right: solid 1px #21252d;
+}
+.app-nav .nav-befor > ul > li:before,
+.app-nav .nav-after > ul > li:before {
+  right: 0;
+  border-right: solid 1px #394457;
+}
+.app-nav .nav-befor > ul > li:hover,
+.app-nav .nav-after > ul > li:hover {
+  background-color: #394457;
+}
+.app-nav .nav-befor > ul > li:hover:after,
+.app-nav .nav-after > ul > li:hover:after,
+.app-nav .nav-befor > ul > li:hover:before,
+.app-nav .nav-after > ul > li:hover:before {
+  border-color: transparent;
+}
+.app-nav .nav-befor > ul > li:hover,
+.app-nav .nav-after > ul > li:hover,
+.app-nav .nav-befor > ul > li:hover > a,
+.app-nav .nav-after > ul > li:hover > a {
+  color: white;
+}
+.app-nav .nav-befor > ul > li:last-child:after,
+.app-nav .nav-after > ul > li:last-child:after,
+.app-nav .nav-befor > ul > li:last-child:before,
+.app-nav .nav-after > ul > li:last-child:before {
+  border-color: transparent;
+}
+.app-nav .nav-befor > ul > li .nav-menu,
+.app-nav .nav-after > ul > li .nav-menu {
+  top: 100%;
+  left: 0;
+  width: 100%;
+  display: none;
+  position: absolute;
+  background: white;
+  box-shadow: 1px 1px 5px 1px #ececec;
+}
+.app-nav .nav-befor > ul > li .nav-menu li,
+.app-nav .nav-after > ul > li .nav-menu li {
+  color: #444444;
+  padding: 5px 0px;
+}
+.app-nav .nav-befor > ul > li .nav-menu li a,
+.app-nav .nav-after > ul > li .nav-menu li a {
+  color: #444444;
+}
+.app-nav .nav-befor > ul > li .nav-menu li:hover,
+.app-nav .nav-after > ul > li .nav-menu li:hover {
+  background-color: #f4f7c7;
+}
+.app-nav .nav-befor > ul > li .nav-menu li a,
+.app-nav .nav-after > ul > li .nav-menu li a {
+  color: #444444;
+}
+.app-nav .nav-befor > ul > li:hover .nav-menu,
+.app-nav .nav-after > ul > li:hover .nav-menu {
+  display: block;
+}
+.app-nav .nav-befor > ul > li:hover .nav-menu li a,
+.app-nav .nav-after > ul > li:hover .nav-menu li a {
+  color: #444444;
+}
+.app-nav .nav-befor {
+  flex: 1;
+}
+.app-nav .nav-befor > ul > li {
+  color: #d6ccb9;
+  padding: 0 20px;
+}
+.app-nav .nav-befor > ul > li:nth-child(2),
+.app-nav .nav-befor > ul > li:nth-child(3) {
+  padding: 0;
+  background-color: #394457;
+}
+.app-nav .nav-befor > ul > li:nth-child(2) > .iconfont,
+.app-nav .nav-befor > ul > li:nth-child(3) > .iconfont,
+.app-nav .nav-befor > ul > li:nth-child(2) > * > .iconfont,
+.app-nav .nav-befor > ul > li:nth-child(3) > * > .iconfont {
+  color: #c79631;
+  color: #ffffff;
+  font-size: 20px;
+  transition: font-size 0.1s, color 0.6s;
+  -moz-transition: font-size 0.1s, color 0.6s;
+  -webkit-transition: font-size 0.1s, color 0.6s;
+  -o-transition: font-size 0.1s, color 0.6s;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-perspective: 1000;
+  -moz-perspective: 1000;
+  -ms-perspective: 1000;
+  perspective: 1000;
+}
+.app-nav .nav-befor > ul > li:nth-child(2):hover,
+.app-nav .nav-befor > ul > li:nth-child(3):hover {
+  background-color: #45536b;
+}
+.app-nav .nav-befor > ul > li:nth-child(2):hover > .iconfont,
+.app-nav .nav-befor > ul > li:nth-child(3):hover > .iconfont,
+.app-nav .nav-befor > ul > li:nth-child(2):hover > * > .iconfont,
+.app-nav .nav-befor > ul > li:nth-child(3):hover > * > .iconfont {
+  color: white;
+  font-size: 24px;
+}
+.app-nav .nav-befor > ul > li:nth-child(1) {
+  padding: 0 20px;
+  background-color: #394457;
+}
+.app-nav .nav-befor > ul > li:nth-child(1):after,
+.app-nav .nav-befor > ul > li:nth-child(1):before {
+  top: 0;
+  height: 100%;
+}
+.app-nav .nav-befor > ul > li:nth-child(1):after {
+  border-color: #475369;
+}
+.app-nav .nav-befor > ul > li:nth-child(1):before {
+  border-color: #383942;
+}
+.app-nav .nav-befor > ul > li:nth-child(1):hover {
+  background-color: #45536b;
+}
+.app-nav .nav-befor > ul > li:nth-child(1) a {
+  color: #c1a632;
+}
+.app-nav .nav-befor > ul > li:first-child {
+  padding: 0 10px;
+}
+.app-nav .nav-befor > ul > li:nth-child(2):after,
+.app-nav .nav-befor > ul > li:nth-child(2):before {
+  top: 0;
+  height: 100%;
+  border-right: solid 1px #383942;
+}
+.app-nav .nav-befor > ul > li:nth-child(2):before {
+  border-right: solid 1px #475369;
+}
+.app-nav .nav-befor > ul > li:nth-child(3):after,
+.app-nav .nav-befor > ul > li:nth-child(3):before {
+  top: 0;
+  height: 100%;
+  border-color: #1e304e;
+}
+.app-nav .nav-befor > ul > li:nth-child(3):before {
+  top: 0;
+  height: 100%;
+  border-color: #464c56;
+}
+.app-nav .nav-befor > ul > li:nth-child(3):hover {
+  /*&:after,&:before{
+            border-color:#5f5d5d;
+          }
+          &:after{
+            border-color:#5f5d5d;
+          }
+          &:before{
+             border-color:#5f5d5d;
+           }*/
+}
+.app-nav .nav-befor > ul > li a {
+  color: #f5f4f4;
+  display: flex;
+  justify-content: center;
+}
+.app-nav .nav-after > ul > li {
+  padding: 0 15px;
+}
+.app-nav .nav-after > ul > li,
+.app-nav .nav-after > ul > li > a {
+  color: #a5a5a5;
+}
+.app-nav .nav-after > ul > li > .iconfont,
+.app-nav .nav-after > ul > li > a > .iconfont {
+  font-size: 20px;
+}
+.app-menu {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.app-menu:hover .app-menu-content {
+  transform: scale(1, 1);
+  -ms-transform: scale(1, 1);
+  -moz-transform: scale(1, 1);
+  -webkit-transform: scale(1, 1);
+  -o-transform: scale(1, 1);
+}
+.app-menu:hover .app-menu-content > li > a {
+  color: #5b5b5b;
+}
+.app-menu a {
+  color: #5b5b5b;
+}
+.app-menu-content {
+  left: 0;
+  top: 100%;
+  z-index: 99;
+  padding: 20px;
+  -webkit-transform: translateZ(0);
+  -moz-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  -o-transform: translateZ(0);
+  transform: translateZ(0);
+  cursor: initial;
+  position: absolute;
+  transform: scale(0, 0);
+  -ms-transform: scale(0, 0);
+  -moz-transform: scale(0, 0);
+  -webkit-transform: scale(0, 0);
+  -o-transform: scale(0, 0);
+  border: solid 1px #e8e7e7;
+  background-color: white;
+  transform-origin: 0 0;
+  -moz-column-gap: 20px;
+  /* Firefox */
+  -webkit-column-gap: 20px;
+  /* Safari and Chrome */
+  column-gap: 20px;
+  transition: transform 0.3s ease-in-out;
+  -moz-transition: transform 0.3s ease-in-out;
+  -webkit-transition: transform 0.3s ease-in-out;
+  -o-transition: transform 0.3s ease-in-out;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-perspective: 1000;
+  -moz-perspective: 1000;
+  -ms-perspective: 1000;
+  perspective: 1000;
+}
+.app-menu-content.loading {
+  height: 75px;
+  width: 100px;
+  font-size: 20px;
+  color: #d6d5d5;
+}
+.app-menu-content.loading p {
+  font-size: 12px;
+}
+.app-menu-content > li {
+  width: 190px;
+  color: #535353;
+  text-align: left;
+}
+.app-menu-content > li > a {
+  height: 30px;
+  display: flex;
+  align-items: center;
+  position: relative;
+  font-size: 14px;
+  padding-left: 10px;
+  background-color: #f9fdf8;
+  border: solid 1px #f0f9f3;
+  transition: background-color 0.3s;
+  -moz-transition: background-color 0.3s;
+  -webkit-transition: background-color 0.3s;
+  -o-transition: background-color 0.3s;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-perspective: 1000;
+  -moz-perspective: 1000;
+  -ms-perspective: 1000;
+  perspective: 1000;
+}
+.app-menu-content > li > a:before {
+  left: -5px;
+  content: '';
+  height: 10px;
+  display: inline-block;
+  position: relative;
+  border-left: dotted 2px #bbd6b6;
+}
+.app-menu-content > li > a span {
+  color: #4a5f90;
+}
+.app-menu-content > li > a:hover {
+  background-color: #fffac3;
+}
+.app-menu-content > li > a:hover:before {
+  border-left: dotted 2px #e2b28a;
+}
+.app-menu-content > li > a:hover span {
+  color: #dc9241;
+}
+.app-menu-group-content li {
+  height: 33px;
+  color: #6e6e6e;
+  padding-left: 14px;
+}
+.app-menu-group-content li:hover {
+  background-color: #eae8cb;
+}
+.app-menu-group-content a {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+.app-menu-group-content a > span {
+  padding-left: 4px;
+  color: #5b5b5b;
+}
+.app-location {
+  font-size: 14px;
+  vertical-align: middle;
+  background-color: #f7f7f7;
+  border-bottom: solid 1px #e4e4e4;
+  box-shadow: 1px 1px 1px #ececec;
+}
+.app-location strong {
+  color: #939496;
+  font-weight: 600;
+  vertical-align: middle;
+}
+.app-location p {
+  color: #c5c5c5;
+  display: inline-block;
+  vertical-align: middle;
+}
+.app-location > a {
+  height: 100%;
+  padding: 5px 0 5px 5px;
+  color: #af8b6a;
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
+}
+.app-location > a:not(:last-child) {
+  cursor: pointer;
+}
+.app-location > a:not(:last-child):after {
+  color: #d8d8d8;
+  content: "/";
+  font-size: 20px;
+  padding-right: 5px;
+  padding-left: 10px;
+  vertical-align: middle;
+}
+.app-location > a:not(:last-child):hover > span {
+  color: #de7803;
+}
+.app-location > a:not(:last-child):hover ul {
+  transform: scale(1, 1);
+  -ms-transform: scale(1, 1);
+  -moz-transform: scale(1, 1);
+  -webkit-transform: scale(1, 1);
+  -o-transform: scale(1, 1);
+}
+.app-location > a:last-child {
+  color: #949494;
+}
+.app-location ul {
+  -webkit-transform: translateZ(0);
+  -moz-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  -o-transform: translateZ(0);
+  transform: translateZ(0);
+  left: 0;
+  top: 100%;
+  min-width: 100px;
+  position: absolute;
+  border: solid 1px #e6e6e6;
+  background-color: #f7f7f7;
+  border-top: none;
+  transform-origin: 0 0;
+  transform: scale(1, 0);
+  -ms-transform: scale(1, 0);
+  -moz-transform: scale(1, 0);
+  -webkit-transform: scale(1, 0);
+  -o-transform: scale(1, 0);
+  transition: transform 0.3s ease-in-out;
+  -moz-transition: transform 0.3s ease-in-out;
+  -webkit-transition: transform 0.3s ease-in-out;
+  -o-transition: transform 0.3s ease-in-out;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-perspective: 1000;
+  -moz-perspective: 1000;
+  -ms-perspective: 1000;
+  perspective: 1000;
+}
+.app-location li {
+  color: #90a06e;
+  padding: 5px;
+}
+.app-location li:hover {
+  color: #bd70ce;
+  text-shadow: 1px 1px 1px #f7f7f7;
 }
