指令持续完善

--- a/project/app/home/view/index/index.html
+++ b/project/app/home/view/index/index.html
@@ -1,12 +1,12 @@
 <!--<h2>vf page {{window.title}}</h2>-->
 <!--<p v-on:click="click"> click</p>-->
-<a href="home/custom/list?viewId=136">列表页面</a>
+<a href="home/custom/list?viewId=136" v-attr:test="window.attr">列表页面</a>
 <!--<test config="testConfig"></test>-->
 <!--<input type="text" date:dateTime></input>
 <input type="text" date:dateTime></input>
 <input type="text" date:dateTime></input>-->
 
-<h4 v-on:click="click" v-if="window.if">{{window.title}}click</h4>
+<!--<h4 v-on:click="click" v-if="window.if" v-class="window.classConf">{{window.title}}click</h4>-->
 
 <!--<down-menu conf="[1,6,9]"></down-menu>-->
 
@@ -14,7 +14,12 @@
     <!--<li v-for="(key ,val) in window.list">{{key}}:{{val}}</li>-->
 </ul>
 
-<select-multi conf="selectConf"></select-multi>
+<!--<input type="checkbox">
+<input type="radio">
+<input type="text"  v-model="window.inputVal">-->
+
+
+<select conf="selectConf"></select>
 <!--
 <layout-block loaction="head">
 
