--- a/project/comm/style/less/component/app/app-nav.less
+++ b/project/comm/style/less/component/app/app-nav.less
@@ -204,8 +204,9 @@
     .app-menu-content{
       .transform(scale(1, 1));
       >li{
-        >a{
+        a{
           color: @menuColor;
+          justify-content:left !important;
         }
       }
     }
