--- a/project/comm/style/less/component/index.less
+++ b/project/comm/style/less/component/index.less
@@ -4,6 +4,9 @@
 //form表单
 @import "form/form-input";
 
+//select多选
+@import "form/select-selectize";
+
 //date日期样式
 @import "form/date/laydate.less";
 
