--- a/project/app/home/view/index/index.html
+++ b/project/app/home/view/index/index.html
@@ -1,6 +1,6 @@
 <!--<h2>vf page {{window.title}}</h2>-->
 <!--<p v-on:click="click"> click</p>-->
-<a href="home/custom/list?viewId=136" v-attr:test="window.attr">列表页面</a>
+<!--<a href="home/custom/list?viewId=136" v-attr:test="window.attr">列表页面</a>-->
 <!--<test config="testConfig"></test>-->
 <!--<input type="text" date:dateTime></input>
 <input type="text" date:dateTime></input>
@@ -10,7 +10,7 @@
 
 <!--<down-menu conf="[1,6,9]"></down-menu>-->
 
-<ul>
+<ul >
     <!--<li v-for="(key ,val) in window.list">{{key}}:{{val}}</li>-->
 </ul>
 
@@ -20,6 +20,7 @@
 
 
 <select conf="selectConf"></select>
+
 <!--
 <layout-block loaction="head">
 
