--- a/project/app/home/view/index/index.html
+++ b/project/app/home/view/index/index.html
@@ -6,25 +6,17 @@
 <input type="text" date:dateTime></input>
 <input type="text" date:dateTime></input>-->
 
-<!--<h4 v-on:click="click" v-if="window.if" v-class="window.classConf">{{window.title}}click</h4>-->
+<h4 v-on:click="click" v-if="window.if" v-class="window.classConf">{{window.title}}click</h4>
 
 <!--<down-menu conf="[1,6,9]"></down-menu>-->
 
+
 <ul >
     <!--<li v-for="(key ,val) in window.list">{{key}}:{{val}}</li>-->
+    <li>
+        <a href="demo/form/form-layout">表单页面</a>
+    </li>
 </ul>
-
 <!--<input type="checkbox">
 <input type="radio">
 <input type="text"  v-model="window.inputVal">-->
-
-
-<select conf="selectConf"></select>
-
-<!--
-<layout-block loaction="head">
-
-    <div>1</div>
-    <div>2</div>
-    <div>3</div>
-</layout-block>-->
