--- a/project/comm/style/less/component/index.less
+++ b/project/comm/style/less/component/index.less
@@ -8,7 +8,10 @@
 @import "form/select-selectize";
 
 //date日期样式
-@import "form/date/laydate.less";
+@import "form/laydate.less";
+
+//form表单布局
+@import "form/form-layout";
 
 //应用组件
 @import "app/index";
