--- a/project/comm/style/less/app/layout.less
+++ b/project/comm/style/less/app/layout.less
@@ -1,9 +1,11 @@
 .page-layout{
   height:100%;
   //padding-top: 85px;
-  padding-top: 50px;
   position: relative;
   background-color: #EDF0F5;
+  *{
+    box-sizing: border-box;
+  }
   .page-head{
     top:0;
     width:100%;
@@ -14,6 +16,7 @@
   .page-main{
     width:100%;
     height:100%;
+    padding-top: 50px;
     overflow-y: scroll;
     &::-webkit-scrollbar{
       height:10px;
