--- a/project/comm/style/less/base/base.less
+++ b/project/comm/style/less/base/base.less
@@ -3,7 +3,7 @@
   padding: 0;
   outline: none;
   //font-size: 1.4rem;
-  box-sizing: border-box;
+  //box-sizing: border-box;
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
   -webkit-tap-highlight-color: transparent;
 }
