--- a/project/comm/style/less/component/index.less
+++ b/project/comm/style/less/component/index.less
@@ -5,7 +5,7 @@
 @import "form/form-input";
 
 //select多选
-@import "form/select-selectize";
+@import "form/chosen";
 
 //date日期样式
 @import "form/laydate.less";
