--- a/project/app/demo/view/form/form-layout.html
+++ b/project/app/demo/view/form/form-layout.html
@@ -1,60 +1,3 @@
 <form>
-    <div class="form-layout" style="background-color: white;height:100%;">
-        <ul>
-            <li>
-                <label>文本框</label>
-                <ins>
-                    <input type="text">
-                </ins>
-            </li>
-            <li>
-                <label>日期</label>
-                <ins>
-                    <input type="date">
-                </ins>
-            </li>
-            <li>
-                <label>单选框</label>
-                <ins>
-                    <label><input type="radio"><span>语文</span></label>
-                    <label><input type="radio"><span>数学</span></label>
-                    <label><input type="radio"><span>英语</span></label>
-                    <label><input type="radio"><span>化学</span></label>
-                    <label><input type="radio"><span>物理</span></label>
-                    <label><input type="radio"><span>地理</span></label>
-                    <label><input type="radio"><span>生物</span></label>
-                </ins>
-            </li>
-            <li>
-                <label>复选框</label>
-                <ins>
-                    <label><input type="checkbox"><span>语文</span></label>
-                    <label><input type="checkbox"><span>数学</span></label>
-                    <label><input type="checkbox"><span>英语</span></label>
-                    <label><input type="checkbox"><span>化学</span></label>
-                    <label><input type="checkbox"><span>物理</span></label>
-                    <label><input type="checkbox"><span>地理</span></label>
-                    <label><input type="checkbox"><span>生物</span></label>
-                </ins>
-            </li>
-            <li>
-                <label>多选框</label>
-                <ins>
-                    <select multiple="multiple" config="selectConf"></select>
-                </ins>
-            </li>
-            <li>
-                <label>多行文本框</label>
-                <ins>
-                    <textarea></textarea>
-                </ins>
-            </li>
-            <li>
-                <label>颜色选择</label>
-                <ins>
-                    <input type="color">
-                </ins>
-            </li>
-        </ul>
-    </div>
+    <input type="text" v-valid="{required:true,minlen:{value:5,message:'视图类型最短{{value}}字符'}}">
 </form>
