--- a/project/comm/style/less/component/form/form-layout.less
+++ b/project/comm/style/less/component/form/form-layout.less
@@ -40,7 +40,7 @@
     }
   }
 
-  input:not([type="radio"]):not([type="checkbox"]):not([type="hidden"]), textarea, .select-document, select, .selectize-control, .input-file {
+  input:not([type="radio"]):not([type="checkbox"]):not([type="hidden"]), textarea, .select-document, select, .input-file {
     color: #5ccac0;
     color: #20a599;
     @color: #20a599;
@@ -95,18 +95,4 @@
     height: 80px;
   }
 
-  .selectize-control, .selectize-input, .selectize-control.multi .selectize-input.has-items {
-    padding: 0;
-  }
-  .selectize-control {
-    border: none;
-  }
-  .selectize-input {
-    padding-left: 5px;
-    border: solid 1px #e3ecf7;
-    .transition(border-color 0.5s);
-    &.focus {
-      border-color: #57bfb6;
-    }
-  }
 }
