在组件与指令中支持向外部提供相关数据

--- a/project/comm/style/less/plugins/hint/iziToast.less
+++ b/project/comm/style/less/plugins/hint/iziToast.less
@@ -21,7 +21,7 @@
   padding: 8px 50px 9px 0;
   background: rgba(238,238,238,0.9);
   border-color: rgba(238,238,238,0.9);
-  min-height: 54px;
+  //min-height: 54px;
   width: 100%;
   pointer-events: all;
   cursor: default;
