--- a/project/app/home/view/index/index.html
+++ b/project/app/home/view/index/index.html
@@ -1,20 +1,16 @@
 <!--<h2>vf page {{window.title}}</h2>-->
 <!--<p v-on:click="click"> click</p>-->
 <!--<a href="home/custom/list?viewId=136" v-attr:test="window.attr">列表页面</a>-->
-<!--<test config="testConfig"></test>-->
-<!--<input type="text" date:dateTime></input>
-<input type="text" date:dateTime></input>
-<input type="text" date:dateTime></input>-->
 
 <h4 v-on:click="click" v-if="window.if" v-class="window.classConf">{{window.title}}click</h4>
-
-<!--<down-menu conf="[1,6,9]"></down-menu>-->
-
 
 <ul >
     <!--<li v-for="(key ,val) in window.list">{{key}}:{{val}}</li>-->
     <li>
         <a href="demo/form/form-layout">表单页面</a>
+    </li>
+    <li>
+        <a href="demo/list/list-grid">list-grid</a>
     </li>
 </ul>
 <!--<input type="checkbox">
