--- a/project/app/demo/view/form/form-layout.html
+++ b/project/app/demo/view/form/form-layout.html
@@ -59,4 +59,5 @@
         </ul>
     </div>
     <button type="button" v-on:click="getForm(formAPI.exps)">test get form</button>
+    <button type="button" v-on:click="validForm(formAPI.exps)">test form valid</button>
 </form>
